# prednet

./: .gitignore  DARKNESS_PENALTIES.md  EXPERIMENTS.md  GRAY_BACKGROUND.md  check_model.py  config.py  debug.py  eval.py  evaluate.py  kitti_data_utils.py  kitti_dataset.py  prednet.py  pyproject.toml  train.py
runs/prednet_training_20250902_005053/: events.out.tfevents.1756745453.lappu.85741.0
runs/prednet_training_20250902_174823/: events.out.tfevents.1756806503.lappu.156815.0
runs/prednet_training_20250902_174849/: events.out.tfevents.1756806529.lappu.157126.0
runs/prednet_training_20250902_174953/: events.out.tfevents.1756806593.lappu.158073.0
scripts/: mnist_download_data.sh
tests/: test_dataloader.py  test_metrics.py
utils/: __init__.py  dataset_generator.py  early_stopping.py  kitti.py  mnist.py  model.py  plot.py
