[project]
name = "fyp-prednet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "hickle>=5.0.3",
    "imageio>=2.37.0",
    "matplotlib>=3.10.5",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "wandb>=0.21.3",
]
